--- a/www/index.html
+++ b/www/index.html
@@ -5,23 +5,33 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
 
     <!-- custom css -->
     <link href="css/style.css" rel="stylesheet">
 
+    <!-- datepicker-for-ionic css -->
+    <link href="lib/datepicker-for-ionic/dist/style.css" rel="stylesheet">
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-messages.min.js"></script>
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <!-- datepicker-for-ionic js -->
+    <script src="lib/datepicker-for-ionic/dist/templates.min.js"></script>
+    <script src="lib/datepicker-for-ionic/dist/ionic-datepicker.min.js"></script>
+
+    <!-- angular-messages js -->
+    <script src="js/angular-messages.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- Parse -->
-    <script src="//www.parsecdn.com/js/parse-1.6.2.min.js"></script>
+    <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.6.2.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
