--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/jquery_v1.11.3.min.js"></script>
 
     <!-- datepicker-for-ionic js -->
     <script src="lib/datepicker-for-ionic/dist/templates.min.js"></script>
@@ -27,11 +27,12 @@
     <!-- angular-messages js -->
     <script src="js/angular-messages.min.js"></script>
 
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- Parse -->
-    <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.6.2.min.js"></script>
+    <script type="text/javascript" src="js/parse-1.6.2.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
